--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apology Letter to Sulaim</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Apology to Sulaim</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Dear Sulaim,</h1>
-        <p id="letter-content">
-            I hope this message finds you well. I wanted to take a moment to sincerely apologize for my recent actions. 
-            I realize that I may have hurt you, and that was never my intention. Your friendship means a lot to me, 
-            and I regret any pain I may have caused.
-        </p>
-        <button id="show-more" onclick="toggleMore()">Show More</button>
-        <p id="more-content" class="hidden">
-            I value our friendship deeply and I want to make things right. I am committed to being a better friend 
-            moving forward. Thank you for your understanding, and I hope we can put this behind us.
-        </p>
-        <p>Warm regards,<br>Your Friend</p>
-    </div>
-    <script src="script.js"></script>
+  <div class="container">
+    <h1>Dear Sulaim,</h1>
+    <p id="message">I have something important to say...</p>
+    <button onclick="revealMessage()">Click to reveal</button>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
