--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Apology to Sulaim</title>
+  <title>Sorry Sulaim</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Dear Sulaim,</h1>
-    <p id="message">I have something important to say...</p>
-    <button onclick="revealMessage()">Click to reveal</button>
+    <h1>I'm Sorry, Sulaim</h1>
+    <p>
+      Dear Sulaim, <br><br>
+      I know that I may have hurt you in some way, and for that, I truly apologize. <br>
+      You mean the world to me, and our friendship is something I deeply value. <br><br>
+      Please forgive me, and let's move forward together as the best of friends. <br>
+      Thank you for always being there for me, and I promise to be a better friend.
+    </p>
   </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
